# MatlabDRS

./: .gitignore  MANIFEST.in  MatlabDRS.sln  pyproject.toml  pytest.ini  test_core.py
Sample Applications/GraphingCalculatorDemo/: App.cs  App.xaml  GraphingCalculatorDemo.csproj  MainWindow.cs  MainWindow.xaml
Sample Applications/GraphingCalculatorDemo/Properties/: Resources.resx
drs-analyzer-app/: README.md  build_exe.spec  requirements.txt  setup.py
drs-analyzer-app/src/: drs_plotter.py  energy_eV.txt  wavelength.txt
drs_analyzer/: README.md  __init__.py  cli.py  main.py  requirements.txt  setup.py
drs_analyzer/analysis/: pca_analyser.py  statistical_analyser.py
drs_analyzer/config/: __init__.py  config.yaml  settings.py
drs_analyzer/core/: __init__.py  data_loader.py  data_processor.py  peak_detector.py  statistics.py
drs_analyzer/examples/: example_analysis.py
drs_analyzer/gui/: __init__.py  control_panels.py  main_window.py  plot_widgets.py
drs_analyzer/gui/dialogs/: __init__.py  settings_dialog.py
drs_analyzer/plotting/: __init__.py  drs_plotter.py  export_manager.py
drs_analyzer/utils/: __init__.py  export_manager.py  file_io.py  file_utils.py  logger.py  validators.py
