[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drs-analyzer"
version = "1.0.0"
description = "Advanced DRS spectroscopy analysis toolkit"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "matplotlib>=3.5.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "h5py>=3.0.0",
    "PyQt5>=5.15.0",
    "plotly>=5.0.0",
    "openpyxl>=3.0.0",
    "seaborn>=0.11.0",
    "pyyaml>=5.4.0",
    "tqdm>=4.60.0",
]

[project.scripts]
drs-analyzer = "drs_analyzer.main:main"
drs-cli = "drs_analyzer.cli:main"
